add survey, update swagger and fix typos
